--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.4.95" !default;
+$mdi-version:          "6.5.95" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -74,6 +74,8 @@ $mdi-icons: (
   "account-key": F000B,
   "account-key-outline": F0BE4,
   "account-lock": F115E,
+  "account-lock-open": F1960,
+  "account-lock-open-outline": F1961,
   "account-lock-outline": F115F,
   "account-minus": F000D,
   "account-minus-outline": F0AEC,
@@ -197,10 +199,12 @@ $mdi-icons: (
   "alien": F089A,
   "alien-outline": F10CB,
   "align-horizontal-center": F11C3,
+  "align-horizontal-distribute": F1962,
   "align-horizontal-left": F11C2,
   "align-horizontal-right": F11C4,
   "align-vertical-bottom": F11C5,
   "align-vertical-center": F11C6,
+  "align-vertical-distribute": F1963,
   "align-vertical-top": F11C7,
   "all-inclusive": F06BE,
   "all-inclusive-box": F188D,
@@ -461,12 +465,18 @@ $mdi-icons: (
   "arrange-send-to-back": F0040,
   "arrow-all": F0041,
   "arrow-bottom-left": F0042,
+  "arrow-bottom-left-bold-box": F1964,
+  "arrow-bottom-left-bold-box-outline": F1965,
   "arrow-bottom-left-bold-outline": F09B7,
   "arrow-bottom-left-thick": F09B8,
+  "arrow-bottom-left-thin": F19B6,
   "arrow-bottom-left-thin-circle-outline": F1596,
   "arrow-bottom-right": F0043,
+  "arrow-bottom-right-bold-box": F1966,
+  "arrow-bottom-right-bold-box-outline": F1967,
   "arrow-bottom-right-bold-outline": F09B9,
   "arrow-bottom-right-thick": F09BA,
+  "arrow-bottom-right-thin": F19B7,
   "arrow-bottom-right-thin-circle-outline": F1595,
   "arrow-collapse": F0615,
   "arrow-collapse-all": F0044,
@@ -498,6 +508,7 @@ $mdi-icons: (
   "arrow-down-right": F17A3,
   "arrow-down-right-bold": F17A4,
   "arrow-down-thick": F0046,
+  "arrow-down-thin": F19B3,
   "arrow-down-thin-circle-outline": F1599,
   "arrow-expand": F0616,
   "arrow-expand-all": F004C,
@@ -527,6 +538,7 @@ $mdi-icons: (
   "arrow-left-right-bold": F0E74,
   "arrow-left-right-bold-outline": F09C1,
   "arrow-left-thick": F004E,
+  "arrow-left-thin": F19B1,
   "arrow-left-thin-circle-outline": F159A,
   "arrow-left-top": F17A7,
   "arrow-left-top-bold": F17A8,
@@ -548,22 +560,29 @@ $mdi-icons: (
   "arrow-right-drop-circle": F0059,
   "arrow-right-drop-circle-outline": F005A,
   "arrow-right-thick": F0055,
+  "arrow-right-thin": F19B0,
   "arrow-right-thin-circle-outline": F1598,
   "arrow-right-top": F17AB,
   "arrow-right-top-bold": F17AC,
   "arrow-split-horizontal": F093B,
   "arrow-split-vertical": F093C,
   "arrow-top-left": F005B,
+  "arrow-top-left-bold-box": F1968,
+  "arrow-top-left-bold-box-outline": F1969,
   "arrow-top-left-bold-outline": F09C3,
   "arrow-top-left-bottom-right": F0E75,
   "arrow-top-left-bottom-right-bold": F0E76,
   "arrow-top-left-thick": F09C4,
+  "arrow-top-left-thin": F19B5,
   "arrow-top-left-thin-circle-outline": F1593,
   "arrow-top-right": F005C,
+  "arrow-top-right-bold-box": F196A,
+  "arrow-top-right-bold-box-outline": F196B,
   "arrow-top-right-bold-outline": F09C5,
   "arrow-top-right-bottom-left": F0E77,
   "arrow-top-right-bottom-left-bold": F0E78,
   "arrow-top-right-thick": F09C6,
+  "arrow-top-right-thin": F19B4,
   "arrow-top-right-thin-circle-outline": F1594,
   "arrow-u-down-left": F17AD,
   "arrow-u-down-left-bold": F17AE,
@@ -602,6 +621,7 @@ $mdi-icons: (
   "arrow-up-right": F17BF,
   "arrow-up-right-bold": F17C0,
   "arrow-up-thick": F005E,
+  "arrow-up-thin": F19B2,
   "arrow-up-thin-circle-outline": F1597,
   "arrow-vertical-lock": F115C,
   "artstation": F0B5B,
@@ -986,6 +1006,8 @@ $mdi-icons: (
   "book-variant": F00BF,
   "book-variant-multiple": F00BC,
   "bookmark": F00C0,
+  "bookmark-box-multiple": F196C,
+  "bookmark-box-multiple-outline": F196D,
   "bookmark-check": F00C1,
   "bookmark-check-outline": F137B,
   "bookmark-minus": F09CC,
@@ -1120,6 +1142,8 @@ $mdi-icons: (
   "bulletin-board": F00E5,
   "bullhorn": F00E6,
   "bullhorn-outline": F0B23,
+  "bullhorn-variant": F196E,
+  "bullhorn-variant-outline": F196F,
   "bullseye": F05DD,
   "bullseye-arrow": F08C9,
   "bulma": F12E7,
@@ -1224,11 +1248,14 @@ $mdi-icons: (
   "camera-gopro": F07A1,
   "camera-image": F08CC,
   "camera-iris": F0104,
+  "camera-marker": F19A7,
+  "camera-marker-outline": F19A8,
   "camera-metering-center": F07A2,
   "camera-metering-matrix": F07A3,
   "camera-metering-partial": F07A4,
   "camera-metering-spot": F07A5,
   "camera-off": F05DF,
+  "camera-off-outline": F19BF,
   "camera-outline": F0D5D,
   "camera-party-mode": F0105,
   "camera-plus": F0EDB,
@@ -1247,6 +1274,10 @@ $mdi-icons: (
   "candelabra": F17D2,
   "candelabra-fire": F17D3,
   "candle": F05E2,
+  "candy": F1970,
+  "candy-off": F1971,
+  "candy-off-outline": F1972,
+  "candy-outline": F1973,
   "candycane": F010A,
   "cannabis": F07A6,
   "cannabis-off": F166E,
@@ -1268,6 +1299,7 @@ $mdi-icons: (
   "car-brake-temperature": F190B,
   "car-brake-worn-linings": F190C,
   "car-child-seat": F0FA3,
+  "car-clock": F1974,
   "car-clutch": F1018,
   "car-cog": F13CC,
   "car-connected": F010D,
@@ -1685,6 +1717,8 @@ $mdi-icons: (
   "clock-check": F0FA8,
   "clock-check-outline": F0FA9,
   "clock-digital": F0E97,
+  "clock-edit": F19BA,
+  "clock-edit-outline": F19BB,
   "clock-end": F0151,
   "clock-fast": F0152,
   "clock-in": F0153,
@@ -1956,6 +1990,8 @@ $mdi-icons: (
   "cow-off": F18FC,
   "cpu-32-bit": F0EDF,
   "cpu-64-bit": F0EE0,
+  "cradle": F198B,
+  "cradle-outline": F1991,
   "crane": F0862,
   "creation": F0674,
   "creative-commons": F0D6B,
@@ -2016,6 +2052,7 @@ $mdi-icons: (
   "crosshairs-gps": F01A4,
   "crosshairs-off": F0F45,
   "crosshairs-question": F1136,
+  "crowd": F1975,
   "crown": F01A5,
   "crown-circle": F17DC,
   "crown-circle-outline": F17DD,
@@ -2056,6 +2093,7 @@ $mdi-icons: (
   "currency-php": F09E6,
   "currency-rial": F0E9C,
   "currency-rub": F01B1,
+  "currency-rupee": F1976,
   "currency-sign": F07BE,
   "currency-try": F01B2,
   "currency-twd": F07BF,
@@ -2233,6 +2271,7 @@ $mdi-icons: (
   "distribute-vertical-center": F11CC,
   "distribute-vertical-top": F11CD,
   "diversify": F1877,
+  "diving": F1977,
   "diving-flippers": F0DBF,
   "diving-helmet": F0DC0,
   "diving-scuba": F0DC1,
@@ -2277,6 +2316,7 @@ $mdi-icons: (
   "doorbell": F12E6,
   "doorbell-video": F0869,
   "dot-net": F0AAE,
+  "dots-circle": F1978,
   "dots-grid": F15FC,
   "dots-hexagon": F15FF,
   "dots-horizontal": F01D8,
@@ -2308,6 +2348,7 @@ $mdi-icons: (
   "drag-vertical-variant": F12F1,
   "drama-masks": F0D02,
   "draw": F0F49,
+  "draw-pen": F19B9,
   "drawing": F01DE,
   "drawing-box": F01DF,
   "dresser": F0F4A,
@@ -2354,6 +2395,9 @@ $mdi-icons: (
   "elevator": F01ED,
   "elevator-down": F12C2,
   "elevator-passenger": F1381,
+  "elevator-passenger-off": F1979,
+  "elevator-passenger-off-outline": F197A,
+  "elevator-passenger-outline": F197B,
   "elevator-up": F12C1,
   "ellipse": F0EA0,
   "ellipse-outline": F0EA1,
@@ -2492,6 +2536,8 @@ $mdi-icons: (
   "eye-outline": F06D0,
   "eye-plus": F086B,
   "eye-plus-outline": F086C,
+  "eye-refresh": F197C,
+  "eye-refresh-outline": F197D,
   "eye-remove": F15E3,
   "eye-remove-outline": F15E4,
   "eye-settings": F086D,
@@ -2657,6 +2703,7 @@ $mdi-icons: (
   "file-send-outline": F1039,
   "file-settings": F1079,
   "file-settings-outline": F107A,
+  "file-sign": F19C3,
   "file-star": F103A,
   "file-star-outline": F103B,
   "file-swap": F0FB4,
@@ -2812,6 +2859,8 @@ $mdi-icons: (
   "folder-account-outline": F0B9C,
   "folder-alert": F0DCC,
   "folder-alert-outline": F0DCD,
+  "folder-check": F197E,
+  "folder-check-outline": F197F,
   "folder-clock": F0ABA,
   "folder-clock-outline": F0ABB,
   "folder-cog": F107F,
@@ -3025,6 +3074,7 @@ $mdi-icons: (
   "fountain": F096B,
   "fountain-pen": F0D12,
   "fountain-pen-tip": F0D13,
+  "fraction-one-half": F1992,
   "freebsd": F08E0,
   "french-fries": F1957,
   "frequently-asked-questions": F0EB4,
@@ -3421,6 +3471,9 @@ $mdi-icons: (
   "home-floor-l": F0D86,
   "home-floor-negative-1": F0DD3,
   "home-group": F0DD4,
+  "home-group-minus": F19C1,
+  "home-group-plus": F19C0,
+  "home-group-remove": F19C2,
   "home-heart": F0827,
   "home-import-outline": F0F9C,
   "home-lightbulb": F1251,
@@ -3473,6 +3526,7 @@ $mdi-icons: (
   "human-capacity-decrease": F159B,
   "human-capacity-increase": F159C,
   "human-child": F02E7,
+  "human-dolly": F1980,
   "human-edit": F14E8,
   "human-female": F0649,
   "human-female-boy": F0A59,
@@ -3500,6 +3554,7 @@ $mdi-icons: (
   "human-queue": F1571,
   "human-scooter": F11E9,
   "human-wheelchair": F138D,
+  "human-white-cane": F1981,
   "humble-bundle": F0744,
   "hvac": F1352,
   "hvac-off": F159E,
@@ -3585,6 +3640,7 @@ $mdi-icons: (
   "ip": F0A5F,
   "ip-network": F0A60,
   "ip-network-outline": F0C90,
+  "ip-outline": F1982,
   "ipod": F0C91,
   "iron": F1824,
   "iron-board": F1838,
@@ -3615,6 +3671,8 @@ $mdi-icons: (
   "kettle-steam-outline": F131A,
   "kettlebell": F1300,
   "key": F0306,
+  "key-alert": F1983,
+  "key-alert-outline": F1984,
   "key-arrow-right": F1312,
   "key-chain": F1574,
   "key-chain-variant": F1575,
@@ -3656,6 +3714,8 @@ $mdi-icons: (
   "keyboard-variant": F0313,
   "khanda": F10FD,
   "kickstarter": F0745,
+  "kite": F1985,
+  "kite-outline": F1986,
   "kitesurfing": F1744,
   "klingon": F135B,
   "knife": F09FB,
@@ -3753,6 +3813,8 @@ $mdi-icons: (
   "library-shelves": F0BA9,
   "license": F0FC3,
   "lifebuoy": F087E,
+  "light-flood-down": F1987,
+  "light-flood-up": F1988,
   "light-recessed": F179B,
   "light-switch": F097E,
   "lightbulb": F0335,
@@ -4028,6 +4090,8 @@ $mdi-icons: (
   "microphone-off": F036D,
   "microphone-outline": F036E,
   "microphone-plus": F08B4,
+  "microphone-question": F1989,
+  "microphone-question-outline": F198A,
   "microphone-settings": F036F,
   "microphone-variant": F0370,
   "microphone-variant-off": F0371,
@@ -4532,6 +4596,11 @@ $mdi-icons: (
   "panorama-fisheye": F03DD,
   "panorama-horizontal": F1928,
   "panorama-horizontal-outline": F03DE,
+  "panorama-outline": F198C,
+  "panorama-sphere": F198D,
+  "panorama-sphere-outline": F198E,
+  "panorama-variant": F198F,
+  "panorama-variant-outline": F1990,
   "panorama-vertical": F1929,
   "panorama-vertical-outline": F03DF,
   "panorama-wide-angle": F195F,
@@ -4639,6 +4708,8 @@ $mdi-icons: (
   "phone-paused-outline": F119A,
   "phone-plus": F0659,
   "phone-plus-outline": F119B,
+  "phone-refresh": F1993,
+  "phone-refresh-outline": F1994,
   "phone-remove": F152F,
   "phone-remove-outline": F1530,
   "phone-return": F082F,
@@ -4649,6 +4720,8 @@ $mdi-icons: (
   "phone-rotate-portrait": F0886,
   "phone-settings": F03FD,
   "phone-settings-outline": F119D,
+  "phone-sync": F1995,
+  "phone-sync-outline": F1996,
   "phone-voip": F03FE,
   "pi": F03FF,
   "pi-box": F0400,
@@ -4712,6 +4785,7 @@ $mdi-icons: (
   "playlist-remove": F0413,
   "playlist-star": F0DF2,
   "plex": F06BA,
+  "pliers": F19A4,
   "plus": F0415,
   "plus-box": F0416,
   "plus-box-multiple": F0334,
@@ -4898,6 +4972,8 @@ $mdi-icons: (
   "ray-start-end": F0444,
   "ray-start-vertex-end": F15D8,
   "ray-vertex": F0445,
+  "razor-double-edge": F1997,
+  "razor-single-edge": F1998,
   "react": F0708,
   "read": F0447,
   "receipt": F0449,
@@ -5056,6 +5132,7 @@ $mdi-icons: (
   "roman-numeral-9": F1090,
   "room-service": F088D,
   "room-service-outline": F0D97,
+  "rotate-360": F1999,
   "rotate-3d": F0EC7,
   "rotate-3d-variant": F0464,
   "rotate-left": F0465,
@@ -5105,6 +5182,7 @@ $mdi-icons: (
   "scale-balance": F05D1,
   "scale-bathroom": F0473,
   "scale-off": F105A,
+  "scale-unbalanced": F19B8,
   "scan-helper": F13D8,
   "scanner": F06AB,
   "scanner-off": F090A,
@@ -5271,6 +5349,8 @@ $mdi-icons: (
   "shield-link-variant": F0D33,
   "shield-link-variant-outline": F0D34,
   "shield-lock": F099D,
+  "shield-lock-open": F199A,
+  "shield-lock-open-outline": F199B,
   "shield-lock-outline": F0CCC,
   "shield-moon": F1828,
   "shield-moon-outline": F1829,
@@ -5361,6 +5441,7 @@ $mdi-icons: (
   "sina-weibo": F0ADF,
   "sine-wave": F095B,
   "sitemap": F04AA,
+  "sitemap-outline": F199C,
   "size-l": F13A6,
   "size-m": F13A5,
   "size-s": F13A4,
@@ -5534,6 +5615,7 @@ $mdi-icons: (
   "spray": F0665,
   "spray-bottle": F0AE0,
   "sprinkler": F105F,
+  "sprinkler-fire": F199D,
   "sprinkler-variant": F1060,
   "sprout": F0E66,
   "sprout-outline": F0E67,
@@ -5674,6 +5756,7 @@ $mdi-icons: (
   "subway-alert-variant": F0D9D,
   "subway-variant": F04DF,
   "summit": F0786,
+  "sun-compass": F19A5,
   "sun-snowflake": F1796,
   "sun-thermometer": F18D6,
   "sun-thermometer-outline": F18D7,
@@ -5717,6 +5800,7 @@ $mdi-icons: (
   "tab-minus": F0B4B,
   "tab-plus": F075C,
   "tab-remove": F0B4C,
+  "tab-search": F199E,
   "tab-unselected": F04EA,
   "table": F04EB,
   "table-account": F13B9,
@@ -5925,8 +6009,10 @@ $mdi-icons: (
   "timer-off-outline": F051E,
   "timer-outline": F051B,
   "timer-sand": F051F,
+  "timer-sand-complete": F199F,
   "timer-sand-empty": F06AD,
   "timer-sand-full": F078C,
+  "timer-sand-paused": F19A0,
   "timer-settings": F1923,
   "timer-settings-outline": F1924,
   "timetable": F0520,
@@ -6059,7 +6145,14 @@ $mdi-icons: (
   "truck-fast": F0788,
   "truck-fast-outline": F129C,
   "truck-flatbed": F1891,
+  "truck-minus": F19AE,
+  "truck-minus-outline": F19BD,
   "truck-outline": F129D,
+  "truck-plus": F19AD,
+  "truck-plus-outline": F19BC,
+  "truck-remove": F19AF,
+  "truck-remove-outline": F19BE,
+  "truck-snowflake": F19A6,
   "truck-trailer": F0727,
   "trumpet": F1096,
   "tshirt-crew": F0A7B,
@@ -6123,6 +6216,8 @@ $mdi-icons: (
   "usb-flash-drive": F129E,
   "usb-flash-drive-outline": F129F,
   "usb-port": F11F0,
+  "vacuum": F19A1,
+  "vacuum-outline": F19A2,
   "valve": F1066,
   "valve-closed": F1067,
   "valve-open": F1068,
@@ -6187,6 +6282,8 @@ $mdi-icons: (
   "video-input-hdmi": F0841,
   "video-input-scart": F0F8C,
   "video-input-svideo": F0842,
+  "video-marker": F19A9,
+  "video-marker-outline": F19AA,
   "video-minus": F09B2,
   "video-minus-outline": F02BA,
   "video-off": F0568,
@@ -6451,6 +6548,8 @@ $mdi-icons: (
   "wifi-sync": F16C7,
   "wikipedia": F05AC,
   "wind-turbine": F0DA5,
+  "wind-turbine-alert": F19AB,
+  "wind-turbine-check": F19AC,
   "window-close": F05AD,
   "window-closed": F05AE,
   "window-closed-variant": F11DB,
@@ -6471,6 +6570,7 @@ $mdi-icons: (
   "wrap": F05B6,
   "wrap-disabled": F0BDF,
   "wrench": F05B7,
+  "wrench-clock": F19A3,
   "wrench-outline": F0BE0,
   "xamarin": F0845,
   "xml": F05C0,
