--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.5.95" !default;
+$mdi-version:          "6.6.95" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -67,6 +67,7 @@ $mdi-icons: (
   "account-group": F0849,
   "account-group-outline": F0B58,
   "account-hard-hat": F05B5,
+  "account-hard-hat-outline": F1A1F,
   "account-heart": F0899,
   "account-heart-outline": F0BE3,
   "account-injury": F1815,
@@ -104,6 +105,8 @@ $mdi-icons: (
   "account-reactivate-outline": F152C,
   "account-remove": F0015,
   "account-remove-outline": F0AED,
+  "account-school": F1A20,
+  "account-school-outline": F1A21,
   "account-search": F0016,
   "account-search-outline": F0935,
   "account-settings": F0630,
@@ -628,12 +631,14 @@ $mdi-icons: (
   "aspect-ratio": F0A24,
   "assistant": F0064,
   "asterisk": F06C4,
+  "asterisk-circle-outline": F1A27,
   "at": F0065,
   "atlassian": F0804,
   "atm": F0D47,
   "atom": F0768,
   "atom-variant": F0E7B,
   "attachment": F0066,
+  "attachment-lock": F19C4,
   "audio-input-rca": F186B,
   "audio-input-stereo-minijack": F186C,
   "audio-input-xlr": F186D,
@@ -644,6 +649,7 @@ $mdi-icons: (
   "auto-fix": F0068,
   "auto-upload": F0069,
   "autorenew": F006A,
+  "autorenew-off": F19E7,
   "av-timer": F006B,
   "aws": F0E0F,
   "axe": F08C8,
@@ -811,6 +817,8 @@ $mdi-icons: (
   "battery-charging-wireless-outline": F0812,
   "battery-check": F17E2,
   "battery-check-outline": F17E3,
+  "battery-clock": F19E5,
+  "battery-clock-outline": F19E6,
   "battery-heart": F120F,
   "battery-heart-outline": F1210,
   "battery-heart-variant": F1211,
@@ -934,6 +942,7 @@ $mdi-icons: (
   "bomb": F0691,
   "bomb-off": F06C5,
   "bone": F00B9,
+  "bone-off": F19E0,
   "book": F00BA,
   "book-account": F13AD,
   "book-account-outline": F13AE,
@@ -961,6 +970,8 @@ $mdi-icons: (
   "book-edit-outline": F168D,
   "book-education": F16C9,
   "book-education-outline": F16CA,
+  "book-heart": F1A1D,
+  "book-heart-outline": F1A1E,
   "book-information-variant": F106F,
   "book-lock": F079A,
   "book-lock-open": F079B,
@@ -1128,6 +1139,7 @@ $mdi-icons: (
   "broom": F00E2,
   "brush": F00E3,
   "brush-off": F1771,
+  "brush-outline": F1A0D,
   "brush-variant": F1813,
   "bucket": F1415,
   "bucket-outline": F1416,
@@ -1248,6 +1260,8 @@ $mdi-icons: (
   "camera-gopro": F07A1,
   "camera-image": F08CC,
   "camera-iris": F0104,
+  "camera-lock": F1A14,
+  "camera-lock-outline": F1A15,
   "camera-marker": F19A7,
   "camera-marker-outline": F19A8,
   "camera-metering-center": F07A2,
@@ -1454,6 +1468,7 @@ $mdi-icons: (
   "ceiling-light-outline": F17C7,
   "cellphone": F011C,
   "cellphone-arrow-down": F09D5,
+  "cellphone-arrow-down-variant": F19C5,
   "cellphone-basic": F011E,
   "cellphone-charging": F1397,
   "cellphone-check": F17FD,
@@ -2610,6 +2625,8 @@ $mdi-icons: (
   "file-certificate": F1186,
   "file-certificate-outline": F1187,
   "file-chart": F0215,
+  "file-chart-check": F19C6,
+  "file-chart-check-outline": F19C7,
   "file-chart-outline": F1029,
   "file-check": F0216,
   "file-check-outline": F0E29,
@@ -2664,6 +2681,8 @@ $mdi-icons: (
   "file-link": F1177,
   "file-link-outline": F1178,
   "file-lock": F0221,
+  "file-lock-open": F19C8,
+  "file-lock-open-outline": F19C9,
   "file-lock-outline": F1030,
   "file-marker": F1774,
   "file-marker-outline": F1775,
@@ -2859,6 +2878,20 @@ $mdi-icons: (
   "folder-account-outline": F0B9C,
   "folder-alert": F0DCC,
   "folder-alert-outline": F0DCD,
+  "folder-arrow-down": F19E8,
+  "folder-arrow-down-outline": F19E9,
+  "folder-arrow-left": F19EA,
+  "folder-arrow-left-outline": F19EB,
+  "folder-arrow-left-right": F19EC,
+  "folder-arrow-left-right-outline": F19ED,
+  "folder-arrow-right": F19EE,
+  "folder-arrow-right-outline": F19EF,
+  "folder-arrow-up": F19F0,
+  "folder-arrow-up-down": F19F1,
+  "folder-arrow-up-down-outline": F19F2,
+  "folder-arrow-up-outline": F19F3,
+  "folder-cancel": F19F4,
+  "folder-cancel-outline": F19F5,
   "folder-check": F197E,
   "folder-check-outline": F197F,
   "folder-clock": F0ABA,
@@ -2871,6 +2904,8 @@ $mdi-icons: (
   "folder-edit-outline": F0DCE,
   "folder-eye": F178A,
   "folder-eye-outline": F178B,
+  "folder-file": F19F6,
+  "folder-file-outline": F19F7,
   "folder-google-drive": F024E,
   "folder-heart": F10EA,
   "folder-heart-outline": F10EB,
@@ -2899,13 +2934,19 @@ $mdi-icons: (
   "folder-music-outline": F135A,
   "folder-network": F0870,
   "folder-network-outline": F0C81,
+  "folder-off": F19F8,
+  "folder-off-outline": F19F9,
   "folder-open": F0770,
   "folder-open-outline": F0DCF,
   "folder-outline": F0256,
+  "folder-play": F19FA,
+  "folder-play-outline": F19FB,
   "folder-plus": F0257,
   "folder-plus-outline": F0B9D,
   "folder-pound": F0D09,
   "folder-pound-outline": F0D0A,
+  "folder-question": F19CA,
+  "folder-question-outline": F19CB,
   "folder-refresh": F0749,
   "folder-refresh-outline": F0542,
   "folder-remove": F0258,
@@ -2928,6 +2969,8 @@ $mdi-icons: (
   "folder-text-outline": F0C83,
   "folder-upload": F0259,
   "folder-upload-outline": F10ED,
+  "folder-wrench": F19FC,
+  "folder-wrench-outline": F19FD,
   "folder-zip": F06EB,
   "folder-zip-outline": F07B9,
   "font-awesome": F003A,
@@ -3104,6 +3147,7 @@ $mdi-icons: (
   "fruit-citrus-off": F13F9,
   "fruit-grapes": F1044,
   "fruit-grapes-outline": F1045,
+  "fruit-pear": F1A0E,
   "fruit-pineapple": F1046,
   "fruit-watermelon": F1047,
   "fuel": F07CA,
@@ -3150,6 +3194,7 @@ $mdi-icons: (
   "garage-open-variant": F12D4,
   "garage-variant": F12D3,
   "garage-variant-lock": F17FC,
+  "gas-burner": F1A1B,
   "gas-cylinder": F0647,
   "gas-station": F0298,
   "gas-station-off": F1409,
@@ -3457,6 +3502,8 @@ $mdi-icons: (
   "home-circle-outline": F104D,
   "home-city": F0D15,
   "home-city-outline": F0D16,
+  "home-clock": F1A12,
+  "home-clock-outline": F1A13,
   "home-edit": F1159,
   "home-edit-outline": F115A,
   "home-export-outline": F0F9B,
@@ -3600,12 +3647,16 @@ $mdi-icons: (
   "image-off-outline": F11D1,
   "image-outline": F0976,
   "image-plus": F087C,
+  "image-refresh": F19FE,
+  "image-refresh-outline": F19FF,
   "image-remove": F1418,
   "image-search": F0977,
   "image-search-outline": F0978,
   "image-size-select-actual": F0C8D,
   "image-size-select-large": F0C8E,
   "image-size-select-small": F0C8F,
+  "image-sync": F1A00,
+  "image-sync-outline": F1A01,
   "image-text": F160D,
   "import": F02FA,
   "inbox": F0687,
@@ -3810,6 +3861,7 @@ $mdi-icons: (
   "less-than": F097C,
   "less-than-or-equal": F097D,
   "library": F0331,
+  "library-outline": F1A22,
   "library-shelves": F0BA9,
   "license": F0FC3,
   "lifebuoy": F087E,
@@ -3817,7 +3869,10 @@ $mdi-icons: (
   "light-flood-up": F1988,
   "light-recessed": F179B,
   "light-switch": F097E,
+  "light-switch-off": F1A24,
   "lightbulb": F0335,
+  "lightbulb-alert": F19E1,
+  "lightbulb-alert-outline": F19E2,
   "lightbulb-auto": F1800,
   "lightbulb-auto-outline": F1801,
   "lightbulb-cfl": F1208,
@@ -3839,6 +3894,8 @@ $mdi-icons: (
   "lightbulb-on": F06E8,
   "lightbulb-on-outline": F06E9,
   "lightbulb-outline": F0336,
+  "lightbulb-question": F19E3,
+  "lightbulb-question-outline": F19E4,
   "lightbulb-spot": F17F4,
   "lightbulb-spot-off": F17F5,
   "lightbulb-variant": F1802,
@@ -4049,6 +4106,8 @@ $mdi-icons: (
   "message-cog": F06F1,
   "message-cog-outline": F1172,
   "message-draw": F0363,
+  "message-fast": F19CC,
+  "message-fast-outline": F19CD,
   "message-flash": F15A9,
   "message-flash-outline": F15AA,
   "message-image": F0364,
@@ -4077,6 +4136,8 @@ $mdi-icons: (
   "message-text": F0369,
   "message-text-clock": F1173,
   "message-text-clock-outline": F1174,
+  "message-text-fast": F19CE,
+  "message-text-fast-outline": F19CF,
   "message-text-lock": F0FCD,
   "message-text-lock-outline": F1175,
   "message-text-outline": F036A,
@@ -4162,6 +4223,8 @@ $mdi-icons: (
   "molecule-co": F12FE,
   "molecule-co2": F07E4,
   "monitor": F0379,
+  "monitor-arrow-down": F19D0,
+  "monitor-arrow-down-variant": F19D1,
   "monitor-cellphone": F0989,
   "monitor-cellphone-star": F098A,
   "monitor-dashboard": F0A07,
@@ -4325,6 +4388,7 @@ $mdi-icons: (
   "near-me": F05CD,
   "necklace": F0F0B,
   "needle": F0391,
+  "needle-off": F19D2,
   "netflix": F0746,
   "network": F06F3,
   "network-off": F0C9B,
@@ -4394,6 +4458,8 @@ $mdi-icons: (
   "notebook-check-outline": F14F6,
   "notebook-edit": F14E7,
   "notebook-edit-outline": F14E9,
+  "notebook-heart": F1A0B,
+  "notebook-heart-outline": F1A0C,
   "notebook-minus": F1610,
   "notebook-minus-outline": F1611,
   "notebook-multiple": F0E55,
@@ -4492,6 +4558,7 @@ $mdi-icons: (
   "numeric-9-plus-circle": F0CB2,
   "numeric-9-plus-circle-outline": F0CB3,
   "numeric-negative-1": F1052,
+  "numeric-off": F19D3,
   "numeric-positive-1": F15CB,
   "nut": F06F8,
   "nutrition": F03C2,
@@ -4550,6 +4617,12 @@ $mdi-icons: (
   "package-up": F03D5,
   "package-variant": F03D6,
   "package-variant-closed": F03D7,
+  "package-variant-closed-minus": F19D4,
+  "package-variant-closed-plus": F19D5,
+  "package-variant-closed-remove": F19D6,
+  "package-variant-minus": F19D7,
+  "package-variant-plus": F19D8,
+  "package-variant-remove": F19D9,
   "page-first": F0600,
   "page-last": F0601,
   "page-layout-body": F06FA,
@@ -4609,6 +4682,7 @@ $mdi-icons: (
   "paper-roll": F1157,
   "paper-roll-outline": F1158,
   "paperclip": F03E2,
+  "paperclip-lock": F19DA,
   "parachute": F0CB4,
   "parachute-outline": F0CB5,
   "paragliding": F1745,
@@ -4663,6 +4737,10 @@ $mdi-icons: (
   "pentagon-outline": F0700,
   "pentagram": F1667,
   "percent": F03F0,
+  "percent-box": F1A02,
+  "percent-box-outline": F1A03,
+  "percent-circle": F1A04,
+  "percent-circle-outline": F1A05,
   "percent-outline": F1278,
   "periodic-table": F08B6,
   "perspective-less": F0D23,
@@ -4679,6 +4757,7 @@ $mdi-icons: (
   "phone-check-outline": F11AA,
   "phone-classic": F0602,
   "phone-classic-off": F1279,
+  "phone-clock": F19DB,
   "phone-dial": F1559,
   "phone-dial-outline": F155A,
   "phone-forward": F03F4,
@@ -4764,6 +4843,10 @@ $mdi-icons: (
   "pizza": F0409,
   "play": F040A,
   "play-box": F127A,
+  "play-box-lock": F1A16,
+  "play-box-lock-open": F1A17,
+  "play-box-lock-open-outline": F1A18,
+  "play-box-lock-outline": F1A19,
   "play-box-multiple": F0D19,
   "play-box-multiple-outline": F13E6,
   "play-box-outline": F040B,
@@ -4890,6 +4973,7 @@ $mdi-icons: (
   "progress-upload": F0998,
   "progress-wrench": F0CBD,
   "projector": F042E,
+  "projector-off": F1A23,
   "projector-screen": F042F,
   "projector-screen-off": F180D,
   "projector-screen-off-outline": F180E,
@@ -4965,6 +5049,8 @@ $mdi-icons: (
   "railroad-light": F0F1E,
   "rake": F1544,
   "raspberry-pi": F043F,
+  "raw": F1A0F,
+  "raw-off": F1A10,
   "ray-end": F0440,
   "ray-end-arrow": F0441,
   "ray-start": F0442,
@@ -4977,6 +5063,7 @@ $mdi-icons: (
   "react": F0708,
   "read": F0447,
   "receipt": F0449,
+  "receipt-outline": F19DC,
   "record": F044A,
   "record-circle": F0EC2,
   "record-circle-outline": F0EC3,
@@ -5101,6 +5188,7 @@ $mdi-icons: (
   "robot-happy": F1719,
   "robot-happy-outline": F171A,
   "robot-industrial": F0B46,
+  "robot-industrial-outline": F1A1A,
   "robot-love": F16A5,
   "robot-love-outline": F16A6,
   "robot-mower": F11F7,
@@ -5168,6 +5256,7 @@ $mdi-icons: (
   "safety-goggles": F0D30,
   "sail-boat": F0EC8,
   "sale": F046F,
+  "sale-outline": F1A06,
   "salesforce": F088E,
   "sass": F07EC,
   "satellite": F0470,
@@ -5631,6 +5720,8 @@ $mdi-icons: (
   "square-root": F0784,
   "square-root-box": F09A3,
   "square-rounded": F14FB,
+  "square-rounded-badge": F1A07,
+  "square-rounded-badge-outline": F1A08,
   "square-rounded-outline": F14FC,
   "square-small": F0A15,
   "square-wave": F147B,
@@ -6024,6 +6115,8 @@ $mdi-icons: (
   "toggle-switch-off": F0522,
   "toggle-switch-off-outline": F0A19,
   "toggle-switch-outline": F0A1A,
+  "toggle-switch-variant": F1A25,
+  "toggle-switch-variant-off": F1A26,
   "toilet": F09AB,
   "toolbox": F09AC,
   "toolbox-outline": F09AD,
@@ -6109,6 +6202,7 @@ $mdi-icons: (
   "transmission-tower": F0D3E,
   "transmission-tower-export": F192C,
   "transmission-tower-import": F192D,
+  "transmission-tower-off": F19DD,
   "trash-can": F0A79,
   "trash-can-outline": F0A7A,
   "tray": F1294,
@@ -6128,6 +6222,8 @@ $mdi-icons: (
   "trending-up": F0535,
   "triangle": F0536,
   "triangle-outline": F0537,
+  "triangle-small-down": F1A09,
+  "triangle-small-up": F1A0A,
   "triangle-wave": F147C,
   "triforce": F0BD9,
   "trophy": F0538,
@@ -6137,6 +6233,8 @@ $mdi-icons: (
   "trophy-variant": F053B,
   "trophy-variant-outline": F053C,
   "truck": F053D,
+  "truck-alert": F19DE,
+  "truck-alert-outline": F19DF,
   "truck-cargo-container": F18D8,
   "truck-check": F0CD4,
   "truck-check-outline": F129A,
@@ -6266,6 +6364,7 @@ $mdi-icons: (
   "vibrate": F0566,
   "vibrate-off": F0CD9,
   "video": F0567,
+  "video-2d": F1A1C,
   "video-3d": F07FD,
   "video-3d-off": F13D9,
   "video-3d-variant": F0ED1,
@@ -6367,6 +6466,7 @@ $mdi-icons: (
   "vuetify": F0E6D,
   "walk": F0583,
   "wall": F07FE,
+  "wall-fire": F1A11,
   "wall-sconce": F091C,
   "wall-sconce-flat": F091D,
   "wall-sconce-flat-outline": F17C9,
